--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/comp426-2023-spring/a04-sadieamato/issues"
   },
-  "homepage": "https://github.com/comp426-2023-spring/a04-sadieamato#readme"
+  "homepage": "https://github.com/comp426-2023-spring/a04-sadieamato#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "minimist": "^1.2.8"
+  },
+  "type": "module"
 }
