--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lib": "lib"
   },
   "scripts": {
-    "test": "\"node server.js --port=5555\"",
+    "test": "node server.js --port=5555",
     "start": "node server.js"
   },
   "repository": {
